# CMakeList.txt : CMake project for Advanced_tutorial, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Advanced_tutorial "Advanced_tutorial.cpp" "Advanced_tutorial.h")

# TODO: Add tests and install targets if needed.
